<resources>
    <string name="app_name">InventoryApp</string>
    <string name="new_product_label">Add new product</string>
    <string name="empty_list">There is nothing to show. Let\'s add new product. Please press plus in the lower right</string>
    <string name="action_insert_dummy_data">insert dummy data</string>
    <string name="action_delete_all_data">delete all data</string>
    <string name="action_save">save</string>
    <string name="action_delete">delete</string>
    <string name="no_products">Sorry, but we don\'t have this product for now.</string>
    <string name="unkown_uri">Unkown URI</string>

    <string name="insert_error">Insert error for: </string>
    <string name="delete_error">Delete error for: </string>
    <string name="update_error">Update error for: </string>

    <string name="insert_dummy">Dummy data inserted</string>
    <string name="deleted_all">All data deleted</string>

    <string name="null_name">Product requires a name</string>
    <string name="null_price">Product requires a price</string>
    <string name="null_quantity">Product requires a quantity</string>
    <string name="null_supplier">Product requires a supplier</string>

    <string name="name_description">Name:</string>
    <string name="price_description">Price:</string>
    <string name="quantity_description">Quantity:</string>
    <string name="supplier_description">Supplier:</string>
    <string name="photo_description">Photo:</string>
    <string name="save_error">You need to fill all data first</string>
    <string name="sales_description">Sales:</string>
    <string name="edit_current_product">edit product</string>
    <string name="delete_current_product">delete product</string>
    <string name="delete_confirmation_question">Do you want to delete this product?</string>
    <string name="delete_all_confirmation_question">Do you want to delete all data?</string>
    <string name="cencel">cancel</string>
    <string name="delete">delete</string>
    <string name="contact_supplier">contact supplier</string>
    <string name="detail_activity_label">Product detail</string>
    <string name="product_edit">Edit product</string>
    <string name="product_add">Add product</string>
    <string name="discard_confirmation">discard</string>
    <string name="choose_image">Choose image</string>
    <string name="add_successful">Product added successful</string>
    <string name="add_error">Save error</string>
    <string name="update_successful">Product update successful</string>
    <string name="edit_update_error">Update error</string>
</resources>
